--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<h1>test</h1>
+<!doctype html>
+<html>
+    <head>
+        <script
+          src="https://cdnjs.cloudflare.com/ajax/libs/brython/3.9.0/brython.js">
+        </script>
+    </head>
+    <body onload="brython()">
+        <script type="text/python">
+            import browser
+            browser.alert("Test")
+        </script>
+    </body>
+</html>
